# nabi

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  LICENSE-POLYFORM  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  settings.gradle.kts
.github/workflows/: gradle.yml
api/: Cargo.toml  build.gradle.kts
api/src/: main.rs
api/src/main/kotlin/live/shuuyu/nabi/api/: NabiAPIManager.kt
api/src/main/kotlin/live/shuuyu/nabi/api/route/: DashboardRoute.kt
api/src/main/kotlin/live/shuuyu/nabi/api/utils/: NabiAPIConfig.kt
bot/: LICENSE-POLYFORM  README.md  build.gradle.kts
bot/database/: build.gradle.kts
bot/gateway/: README.md  build.gradle.kts
bot/serializable-data/: README.md
build-logic/: README.md  build.gradle.kts  settings.gradle.kts
build-logic/convention/: build.gradle.kts
build-logic/i18n/: build.gradle.kts
common/: README.md  build.gradle.kts
dashboard/: README.md  astro.config.ts  build.gradle.kts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
dashboard/src/: index.astro  main.scss  main.ts  main.tsx  vite-env.d.ts
docker/: Dockerfile  api.Dockerfile  docker-compose.yml
docs/: CODE_OF_CONDUCT.md  Contributing.md  Dependencies.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
gradle/: libs.versions.toml
locale/commands/: Ban.toml  Blacklist.toml  ChannelInfo.toml  Dashboard.toml  GuildInfo.toml  Kick.toml  Mute.toml  NabiInfo.toml  RoleInfo.toml  Slowmode.toml  Unban.toml  UserAvatar.toml  UserInfo.toml  Warn.toml
locale/events/: Phishing.toml  (+1 more)
(+418 files in other folders)
